--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-ios": "^4.5.1",
-    "lottie-react-native": "^7.3.4",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
